@@ -10,7 +10,7 @@
     <changelog>
         <![CDATA[
         <p>Changes in 4.9<br/>
-        [BEAM-1184] Reprojection dialog does not remember values ("Output Parameters")<br/>
+        [BEAM-1184] Reprojection dialog does not remember values<br/>
         [BEAM-1183] Improve reprojection UI usability<br/>
         [BEAM-1180] Allow dragging files into VISAT<br/>
         </p>
